// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decodeTimeSpaceFast matches decodeTimeSpace  1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 0:1:02 1`] = `
Object {
  "offset": 6,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1 1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1: 1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:.  1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:. 1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:.3  1`] = `
Object {
  "offset": 5,
  "time": 60.3,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:.3 1`] = `
Object {
  "offset": 4,
  "time": 60.3,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:.3 a 1`] = `
Object {
  "offset": 5,
  "time": 60.3,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:02  1`] = `
Object {
  "offset": 5,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:02 1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:02 a 1`] = `
Object {
  "offset": 5,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:02. 1`] = `
Object {
  "offset": 5,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:02.3 1`] = `
Object {
  "offset": 6,
  "time": 62.3,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:02.a 1`] = `
Object {
  "offset": 5,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:2  1`] = `
Object {
  "offset": 4,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:2 1`] = `null`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:2. 1`] = `
Object {
  "offset": 4,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:2.a 1`] = `
Object {
  "offset": 4,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace 1:2a 1`] = `
Object {
  "offset": 3,
  "time": 62,
}
`;

exports[`decodeTimeSpaceFast matches decodeTimeSpace a 1`] = `null`;
